--- a/main/templates/nav.html
+++ b/main/templates/nav.html
@@ -7,8 +7,12 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="/profile">Profile</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
+          data-bs-toggle="dropdown" aria-expanded="false">Profile</a>
+        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+          <li><a class="dropdown-item" href="/profile">Main</a></li>
+        </ul>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/redeems">Redeems</a>
