--- a/main/templates/nav.html
+++ b/main/templates/nav.html
@@ -12,6 +12,7 @@
           data-bs-toggle="dropdown" aria-expanded="false">Profile</a>
         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
           <li><a class="dropdown-item" href="/profile">Main</a></li>
+          <li><a class="dropdown-item" href="/profile/pwd">Change PW</a></li>
         </ul>
       </li>
       <li class="nav-item">
@@ -20,6 +21,19 @@
       <li class="nav-item">
         <a class="nav-link" href="/follows">Follows</a>
       </li>
+      {{ if .CanInvite }}
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarUserDropdown" role="button" data-bs-toggle="dropdown"
+          aria-expanded="false">Users</a>
+        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarUserDropdown">
+          <li><a class="dropdown-item" href="/usr/add">Invite</a></li>
+          {{ if .IsAdmin }}
+          <li><a class="dropdown-item" href="/usr/manage">Manage Users</a></li>
+          {{end}}
+        </ul>
+      </li>
+
+      {{end}}
       {{ if not .IsLoggedIn }}
       <li class="nav-item">
         <a class="nav-link" href="/login">Login</a>
